fix bugs in padme retention